<resources>
    <string name="app_name">微信</string>
    <string name="login">登陆</string>
    <string name="registry">注册</string>
    <string name="language">语言</string>
    <string name="language_setting">多语言</string>
    <string name="save">保存</string>
    <string name="cityphone">中国(+86)</string>
    <string name="citytext">国家/地区</string>
    <string name="phonelogin">手机号登录</string>
    <string name="phoneregistry">手机号注册</string>
    <string name="phone">手机号</string>
    <string name="fillphone">请填写手机号</string>
    <string name="fillpwd">请填写密码</string>
    <string name="pwd">密码</string>
    <string name="next">下一步</string>
    <string name="pleastwechatpwd">请填写微信密码</string>
    <string name="loginStatic">用微信号/QQ号/邮箱登录</string>
    <string name="smsStatic">用短信验证码登陆</string>
    <string name="RetrievePassword">找回密码</string>
    <string name="EmergencyFreeze">紧急冻结</string>
    <string name="SecurityCenter">微信安全中心</string>
    <string name="editphone">请填写手机号码</string>
    <string name="copyright">点击上面的"注册"按钮，即表示你同意</string>
    <string name="protocolone">《腾讯微信软件许可及服务协议》</string>
    <string name="protocoltwo">《腾讯隐私保护指南》</string>
    <string name="and">和</string>
    <string name="nickname">昵称</string>
    <string name="registrytitle">填写手机号</string>
    <string name="NicknameExample">例如：陈晨</string>
    <string name="Choosecountry">选择国家和地区代码</string>
    <string name="Accountnumber">账号</string>
    <string name="loginstatic">微信号/QQ号/邮箱登录</string>
    <string name="pleaseloginstatic">请填写微信号/QQ号/邮箱</string>
    <string name="getyzm">获取验证码</string>
    <string name="pwdStatic">用密码登陆</string>
    <string name="yzm">验证码</string>
    <string name="inputyzm">请填写验证码</string>
    <string name="my">我</string>
    <string name="find">发现</string>
    <string name="Addressbook">通讯录</string>
    <string name="wechat">微信</string>
    <string name="StartGroupChat">发起群聊</string>
    <string name="Addfriends">添加朋友</string>
    <string name="ScanIt">扫一扫</string>
    <string name="ReceivePayment">收付款</string>
    <string name="WechatAndMobile">微信号/手机号</string>
    <string name="MyWechat">我的微信号：</string>
    <string name="RadarPlusFriend">雷达加朋友</string>
    <string name="AddFriendsAroundYou">添加身边的朋友</string>
    <string name="FaceToFaceGroup">面对面建群</string>
    <string name="EnterSameGroup">与身边的朋友进入同一个群聊</string>
    <string name="ScanQRCode">扫描二维码名片</string>
    <string name="PhoneContact">手机联系人</string>
    <string name="AddFriendsContacts">添加通讯录中的朋友</string>
    <string name="NoPublic">公众号</string>
    <string name="GetInformation">获取更多资讯和服务</string>
    <string name="EnterpriseWeChatContact">企业微信联系人</string>
    <string name="SearchoWeChatMobile">通过手机号搜索企业微信用户</string>
    <string name="CircleFriends">朋友圈</string>
    <string name="shake">摇一摇</string>
    <string name="TakeLook">看一看</string>
    <string name="Search">搜一搜</string>
    <string name="PeopleNearby">附近的人</string>
    <string name="DriftingBottle">漂流瓶</string>
    <string name="Shopping">购物</string>
    <string name="game">游戏</string>
    <string name="Applets">小程序</string>
    <string name="WechatNum">微信号：</string>
    <string name="wallet">钱包</string>
    <string name="Authorization">收藏</string>
    <string name="Album">相册</string>
    <string name="CardPackage">卡包</string>
    <string name="Expression">表情</string>
    <string name="Setting">设置</string>
    <string name="PersonalInformation">个人信息</string>
    <string name="Avatar">头像</string>
    <string name="name">名字</string>
    <string name="Wechatnum">微信号</string>
    <string name="MicroSignal">我的二维码</string>
    <string name="More">更多</string>
    <string name="MyAddress">我的地址</string>
    <string name="cancel">取消</string>
    <string name="CarryOut">完成</string>
    <string name="SetName">设置名字</string>
    <string name="PersonalAvatar">个人头像</string>
    <string name="gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="area">地区</string>
    <string name="Signature">个性签名</string>
    <string name="AddAddress">新增地址</string>
    <string name="SetGender">设置性别</string>
    <string name="SetSignature">设置个性签名</string>
    <string name="thirty">30</string>
    <string name="AddMy">扫一扫上面的二维码图案，加我微信</string>
    <string name="breaks">返回</string>
    <string name="SetAddress">设置地址</string>
    <string name="Contact">联系人</string>
    <string name="CellNumber">手机号码</string>
    <string name="SelectRegion">选择地区</string>
    <string name="AreaInformation">地区信息</string>
    <string name="mobileNum">11位手机号</string>
    <string name="DetailedAddress">详细地址</string>
    <string name="StreetHouseInformation">街道门牌信息</string>
    <string name="PostalCode">邮政编码</string>
    <string name="TakePhoto">拍照</string>
    <string name="ChooseMobilePhotoAlbum">从手机相册选择</string>
    <string name="ViewPreviousAvatar">查看上一张头像</string>
    <string name="savePicture">保存图片</string>
    <string name="search">搜索</string>
    <string name="PictureVideos">图片与视频</string>
    <string name="link">链接</string>
    <string name="file">文件</string>
    <string name="music">音乐</string>
    <string name="chatRecord">聊天记录</string>
    <string name="voice">语音</string>
    <string name="notes">笔记</string>
    <string name="position">位置</string>
    <string name="AccountSecurity">账号与安全</string>
    <string name="MessageNotification">新消息通知</string>
    <string name="Privacy">隐私</string>
    <string name="GeneralPurpose">通用</string>
    <string name="HelpFeedback">帮助与反馈</string>
    <string name="AboutWeChat">关于微信</string>
    <string name="VersionNumber">版本号6.7.2</string>
    <string name="Plugin">插件</string>
    <string name="SwitchAccount">切换账号</string>
    <string name="AignOut">退出登陆</string>


</resources>
