<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white">
    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            android:background="@color/titleblack"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
        <RelativeLayout
                android:id="@+id/rl_head"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@color/titleblack"
        >

            <Button
                    android:id="@+id/bt_return"
                    android:layout_toRightOf="@+id/iv_back"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
            />
            <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SetAddress"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CarryOut"
                    android:background="@null"
                    android:textColor="@color/savecolor"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_alignParentRight="true"
            />
        </RelativeLayout>
        <LinearLayout
                android:layout_below="@+id/rl_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
        android:orientation="vertical">
            <RelativeLayout
                    android:id="@+id/rl_name"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
            >
                <TextView
                        android:id="@+id/tv_Contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Contact"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20sp"
                        android:textColor="@color/black"
                />
                <EditText
                        android:id="@+id/et_name"
                        android:layout_marginLeft="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/name"
                        android:layout_toLeftOf="@+id/iv_name_enter"
                        android:layout_toRightOf="@+id/tv_Contact"
                />
                <ImageView
                        android:id="@+id/iv_name_enter"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:background="@drawable/jt"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20sp"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
            >
                <TextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CellNumber"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20sp"
                        android:textColor="@color/black"
                />
                <EditText
                        android:id="@+id/et_mobile"
                        android:layout_marginLeft="20sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/mobileNum"
                        android:layout_toRightOf="@+id/tv_mobile"
                />


            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_SelectRegion"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
            >
                <TextView
                        android:id="@+id/tv_SelectRegion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SelectRegion"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20sp"
                        android:textColor="@color/black"
                />
                <EditText
                        android:id="@+id/et_SelectRegion"
                        android:layout_marginLeft="20sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/AreaInformation"
                        android:layout_toRightOf="@+id/tv_SelectRegion"
                />
                <ImageView
                        android:id="@+id/iv_SelectRegion_enter"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:background="@drawable/jt"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20sp"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_DetailedAddress"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
            >
                <TextView
                        android:id="@+id/tv_DetailedAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DetailedAddress"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20sp"
                        android:textColor="@color/black"
                />
                <EditText
                        android:id="@+id/et_DetailedAddress"
                        android:layout_marginLeft="20sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/StreetHouseInformation"
                        android:layout_toRightOf="@+id/tv_DetailedAddress"
                />


            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_PostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_marginTop="20sp"
            >
                <TextView
                        android:id="@+id/tv_PostalCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PostalCode"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20sp"
                        android:textColor="@color/black"
                />
                <EditText
                        android:id="@+id/et_PostalCode"
                        android:layout_marginLeft="20sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/PostalCode"
                        android:layout_toRightOf="@+id/tv_PostalCode"
                />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>