<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/interval"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/interval"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@color/interval">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:background="@drawable/login_del"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10sp"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/rl_head"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_marginTop="20sp"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/phoneregistry"
                android:textColor="#FF181818"
                android:textSize="23dp" />
            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="100sp"
                >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20sp"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/tv_name"
                    android:background="@null"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="50sp"
                    android:hint="@string/NicknameExample"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/iv_head_url"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_head_url"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_launcher" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/iv_head_url"
                    android:background="#FFD8D8D8" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/citytext"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_marginLeft="40sp"
                    android:id="@+id/et_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:text="@string/cityphone"
                    android:textColor="@color/logincolor"
                    android:textSize="14sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/et_city"
                    android:layout_marginTop="12dp"
                    android:background="#FFD8D8D8" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_marginLeft="40sp"
                    android:layout_toRightOf="@+id/tv_phone"
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:hint="@string/fillphone"
                    android:textSize="14sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/et_phone"
                    android:layout_marginTop="12dp"
                    android:background="#FFD8D8D8" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="57sp"
                    android:layout_toRightOf="@+id/tv_pwd"
                    android:layout_toLeftOf="@+id/iv_showpwd"
                    android:background="@null"
                    android:hint="@string/fillpwd"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/et_pwd"
                    android:layout_marginTop="12dp"
                    android:background="#FFD8D8D8" />

                <ImageView
                    android:id="@+id/iv_showpwd"
                    android:layout_centerVertical="true"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/bkj" />
            </RelativeLayout>
            <Button
                android:id="@+id/bt_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/registry"
                android:background="@drawable/bt_lime_shape"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="25sp"
                />

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="25sp"
                android:textSize="12sp"
                />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>