<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/splashlogo" />


        <RelativeLayout
            android:id="@+id/rl_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            >
        <Button
            android:id="@+id/bt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:background="@drawable/bt_lime_shape"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_registry"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:background="@drawable/bt_white_shape"
                android:text="@string/registry"
                android:textColor="@color/darkgray" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>